--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="wheel-container">
       <canvas id="wheel"></canvas>
       <button id="spin-button">Spin</button>
+      <div id="marker-arrow"></div>
     </div>
 
     <div class="input-container">
