--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <footer>APP-BY-JEET</footer>
   </div>
 
-  <div id="overlay" class="overlay">
-    <div class="overlay-content">
-      <span id="close-overlay">&times;</span>
-      <h2 id="selected-name"></h2>
-    </div>
+<div id="overlay" class="overlay" style="display: none;">
+  <div class="overlay-content">
+    <span id="close-overlay">&times;</span>
+    <h2 id="selected-name"></h2>
   </div>
+</div>
 
   <script src="script.js"></script>
 </body>
